deploy: d4d3ce6a05b1c5a1d86f37b3ccce38f43c08a244

--- a/1 Physics/6 Statistics/Problem_2/index.html
+++ b/1 Physics/6 Statistics/Problem_2/index.html
@@ -404,11 +404,11 @@ if __name__ == "__main__":
 <p>The visualization shows random points distributed within a square, with points colored based on whether they fall inside or outside the unit circle. As more points are generated, the ratio of points inside the circle to the total number of points converges to <span class="arithmatex">\(\pi/4\)</span>.</p>
 <hr/>
 <h2 id="output-circlebased-monte-carlo-method">Output: Circle‐Based Monte Carlo Method</h2>
-<p><img alt="Monte Carlo Circle Visualization" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Estimating%20π%20Using%20a%20Circle/circle_monte_carlo.png"/></p>
+<p><img alt="alt text" src="../image-8.png"/></p>
 <p><em>Figure 1: Scatter plot of 5 000 random points in the square <span class="arithmatex">\([-1,1]^2\)</span>.<br/>
 Green points lie inside the unit circle, red points lie outside.<br/>
 Estimated <span class="arithmatex">\(π ≈ 3.155200\)</span> (error ≈ 0.013607).</em></p>
-<p><img alt="Convergence of π Estimate (Circle Method)" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Estimating%20π%20Using%20a%20Circle/circle_convergence.png"/></p>
+<p><img alt="alt text" src="../image-9.png"/></p>
 <p><em>Figure 2 (left): <span class="arithmatex">\(π\)</span> estimates as a function of the number of random points (log scale). The dashed red line is the true <span class="arithmatex">\(π\)</span>.</em><br/>
 <em>Figure 2 (right): Absolute error vs. number of points (both axes log scale), showing the expected <span class="arithmatex">\(O(1/\sqrt{n})\)</span> decline in error.</em> </p>
 <hr/>
@@ -605,12 +605,12 @@ if __name__ == "__main__":
 <p>While conceptually elegant, Buffon's Needle typically converges more slowly than the circle-based method. This is because the probability of a needle crossing a line is relatively small, leading to higher variance in the estimate. The error also decreases proportionally to <span class="arithmatex">\(1/\sqrt{n}\)</span>, but with a larger constant factor compared to the circle-based method.</p>
 <hr/>
 <h2 id="output-buffons-needle-experiment">Output: Buffon’s Needle Experiment</h2>
-<p><img alt="Buffon's Needle Visualization" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Estimating%20π%20Using%20Buffon's%20Needle/buffon_needle.png"/></p>
+<p><img alt="alt text" src="../image-10.png"/></p>
 <p><em>Figure 1: Buffon’s Needle experiment with 100 needles dropped on parallel lines spaced 1 unit apart.
 Red segments cross a line, blue segments do not.<br/>
 Estimated <span class="arithmatex">\(π ≈ 3.174603\)</span> (63 crossings out of 100 needles).</em></p>
-<p><img alt="Convergence of π Estimate (Buffon’s Needle)" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Estimating%20π%20Using%20Buffon's%20Needle/buffon_convergence.png"/></p>
-<p><em>Figure 2 (left): Estimated <span class="arithmatex">\(π\)</span> vs. number of needles (log scale). The dashed red line shows true <span class="arithmatex">\(π\)</span>.</em><br/>
+<p><img alt="alt text" src="../image-11.png"/>
+<em>Figure 2 (left): Estimated <span class="arithmatex">\(π\)</span> vs. number of needles (log scale). The dashed red line shows true <span class="arithmatex">\(π\)</span>.</em><br/>
 <em>Figure 2 (right): Absolute error vs. number of needles (both axes log scale), demonstrating roughly <span class="arithmatex">\(O(1/\sqrt{n})\)</span> error decay.</em> </p>
 <hr/>
 <h2 id="terminal-output-buffons-needle-method-results">Terminal Output: Buffon’s Needle Method Results</h2>
@@ -845,25 +845,25 @@ if __name__ == "__main__":
 <hr/>
 <h2 id="output">Output</h2>
 <h3 id="circlebased-monte-carlo-method">Circle‐Based Monte Carlo Method</h3>
-<p><img alt="Monte Carlo Circle Visualization" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Comparison%20of%20Methods/circle_monte_carlo.png"/></p>
+<p><img alt="alt text" src="../image-12.png"/></p>
 <p><em>Figure 1: Scatter plot of 5 000 random points in the square <span class="arithmatex">\([-1,1]^2\)</span>.
 Green points lie inside the unit circle, red points lie outside.
 Estimated <span class="arithmatex">\(π ≈ 3.126400\)</span> (error ≈ 0.015193).</em></p>
-<p><img alt="Circle Convergence" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Comparison%20of%20Methods/circle_convergence.png"/></p>
+<p><img alt="alt text" src="../image-13.png"/></p>
 <p><em>Figure 2 (left): <span class="arithmatex">\(π\)</span> estimates vs. number of points (log scale). The dashed red line marks true <span class="arithmatex">\(π\)</span>.</em>
 <em>Figure 2 (right): Absolute error vs. number of points (both axes log–log), illustrating the <span class="arithmatex">\(O(1/\sqrt{n})\)</span> decline.</em></p>
 <hr/>
 <h3 id="buffons-needle-experiment">Buffon’s Needle Experiment</h3>
-<p><img alt="Buffon’s Needle Visualization" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Comparison%20of%20Methods/buffon_needle.png"/></p>
+<p><img alt="alt text" src="../image-14.png"/></p>
 <p><em>Figure 3: 100 needles dropped onto parallel lines.
 Red needles cross a line; blue do not.
 Estimated <span class="arithmatex">\(π ≈ 2.985075\)</span> <span class="arithmatex">\((error ≈ 0.156518)\)</span>.</em></p>
-<p><img alt="Buffon Convergence" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Comparison%20of%20Methods/buffon_convergence.png"/></p>
-<p><em>Figure 4 (left): π estimates vs. number of needles (log scale) converge slowly toward π.</em>
+<p><img alt="alt text" src="../image-15.png"/>
+<em>Figure 4 (left): π estimates vs. number of needles (log scale) converge slowly toward π.</em>
 <em>Figure 4 (right): Absolute error vs. number of needles (log–log), again showing roughly <span class="arithmatex">\(O(1/\sqrt{n})\)</span> behavior.</em></p>
 <hr/>
 <h3 id="comparison-of-methods">Comparison of Methods</h3>
-<p><img alt="Method Comparison" src="https://raw.githubusercontent.com/akhmeed19/solutions_repo/refs/heads/main/docs/_pics/Statistics/Problem2/Comparison%20of%20Methods/method_comparison.png"/></p>
+<p><img alt="alt text" src="../image-17.png"/> </p>
 <p><em>Figure 5 (top‐left): Estimated π vs. sample size for both methods.</em>
 <em>Figure 5 (top‐right): Error vs. sample size with a 1/√n reference (dashed).</em>
 <em>Figure 5 (bottom‐left): Execution time vs. sample size.</em>
