deploy: bb9781e03beea60b63abf504499b8572737c7c66

--- a/1 Physics/7 Measurements/Problem_1/index.html
+++ b/1 Physics/7 Measurements/Problem_1/index.html
@@ -722,7 +722,7 @@ print(f"g from slope: {g_from_slope:.4f} m/s²  (R²={r**2:.4f})")
 <p><img alt="alt text" src="../image-2.png"/></p>
 <p><strong>Figure 3.</strong> Percent error in measured <span class="arithmatex">\(g\)</span> for each configuration. Shorter lengths and lighter masses tend to exhibit larger errors due to timing uncertainty and air resistance.</p>
 <p><img alt="alt text" src="../image-3.png"/></p>
-<p>Figure 4. Absolute uncertainty <span class="arithmatex">\(\Delta g\)</span> as a function of pendulum length. Intermediate lengths minimize combined relative uncertainties in length and period..</p>
+<p>Figure 4. Absolute uncertainty <span class="arithmatex">\(\Delta g\)</span> as a function of pendulum length. Intermediate lengths minimize combined relative uncertainties in length and period.</p>
 <p><img alt="alt text" src="../image-4.png"/></p>
 <p>Figure 5. Scatter plot of <span class="arithmatex">\(g\)</span> vs. <span class="arithmatex">\(L/T^2\)</span>. Ideally, all points lie on the horizontal line at <span class="arithmatex">\(g = 9.81\)</span> m/s²; scatter reflects measurement noise.</p>
 <p><img alt="alt text" src="../image-5.png"/>
